--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KARTCIS.ID - Platform Ticketing Event Terpercaya</title>
     <meta name="description" content="Beli tiket event marathon, konser, workshop, seminar, dan lainnya dengan mudah dan aman di KARTCIS.ID" />
